2006-09-05  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (parse_smil_entry),
	(parse_smil_head), (parse_smil_entries): Use the top-level
	title from the SMIL playlist if there isn't an entry-specific
	one (Closes: #329451)

2006-09-05  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_is_asf):
	Fix possible buffer overflow that would cause a crash in the
	ASF recognition code (Closes: #354284)

2006-09-04  Bastien Nocera  <hadess@hadess.net>

	* configure.in: the nautilus extension requires gtk-2.0, not
	gtk-x11-2.0

2006-09-04  Bastien Nocera  <hadess@hadess.net>

	* src/totem-skipto.c: (totem_skipto_set_current):
	* src/totem-skipto.h: add totem_skipto_set_current()
	* src/totem.c: (on_skip_to1_activate): set the range as soon as
	we create the "Skip to..." dialogue, as well as setting the
	current time as the default (Closes: #335649)

2006-09-04  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-viewer.c: (totem_embedded_add_children):
	Hide the preferences menu item as it doesn't do anything yet
	(Closes: #353405)

2006-09-04  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: Use the aliased mime-type if there
	is one, rather than the "embed" mime-type, fixes most Windows Media, 
	and Real embedded movies not having an "Open with..." menu item
	(Closes: #354182)

============ Version 2.16.0

2006-09-03  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: update to 2.16.0 (Closes: #341864)

2006-08-31  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: avoid --repeat being passed wrongly,
	a simple one-liner (Closes: #352303)

2006-08-27  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: add start of a support for
	the "filename" parameter to be used in place of "src" (Closes: #352559)

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: add Musepack as a supported file type
